--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -24,7 +24,7 @@
     "host": "127.0.0.1",
     "dialect": "postgres",
     "logging": false,
-    "operatorAliases": false,
+    "operatorsAliases": false,
     "use_env_variable": "DATABASE_URL"
   }
 }
